cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
SET_PROPERTY(GLOBAL PROPERTY TARGET_SUPPORTS_SHARED_LIBS TRUE)

IF(WIN32 OR win64)
	SET(CMAKE_FIND_LIBRARY_SUFFIXES .lib .dll)
ELSE()
	SET(CMAKE_FIND_LIBRARY_SUFFIXES .a)
ENDIF()
 
project(slam)

set (ADDITIONAL_LIBS thermalvis)

FILE(GLOB SLAM_HEADERS *.h*)
FILE(GLOB SLAM_SOURCES *.cpp)

INCLUDE_DIRECTORIES("../../include")

IF(NOT(WIN32 OR win64))
	INCLUDE_DIRECTORIES("../../cfg/cpp/thermalvis/")
ENDIF()

IF (NOT ("${_OpenCV_LIB_PATH}" STREQUAL ""))
	LINK_DIRECTORIES(${_OpenCV_LIB_PATH})
ENDIF()

LIST(APPEND ADDITIONAL_LIBS ${OpenCV_LIBRARIES})

IF(WIN32 OR win64)
	LIST(APPEND ADDITIONAL_LIBS ${Boost_LIBRARIES})
ENDIF()

SET(LIBRARY_NAME "thermalvis_slam")
ADD_LIBRARY(${LIBRARY_NAME} ${SLAM_SOURCES} ${SLAM_HEADERS} )
TARGET_LINK_LIBRARIES(${LIBRARY_NAME} ${OpenCV_LIBS} ${ADDITIONAL_LIBS})
SET_TARGET_PROPERTIES(${LIBRARY_NAME} PROPERTIES COMPILE_FLAGS ${THERMALVIS_COMPILE_FLAGS})
